<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/select_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date_button_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        android:layout_marginTop="16dp" />

    <DatePicker
        android:id="@+id/due_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/select_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time_button_text"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        android:layout_marginTop="16dp" />

    <TimePicker
        android:id="@+id/due_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:layout_marginTop="16dp" />

</LinearLayout>